--- a/templates/index.html
+++ b/templates/index.html
@@ -250,24 +250,14 @@
                   <ul class="nav nav-collapse">
                     <li>
                       <a href="{% url 'orcamento_list' %}">
-                        <span class="sub-item">Listar Orçamentos</span>
+                        <span class="sub-item">Orçamentos</span>
                       </a>
-                    </li>
-                    <li>
-                      <a href="{% url 'orcamento_create' %}">
-                        <span class="sub-item">Adicionar Orçamento</span>
-                      </a>
-                    </li>
+                    </li>                    
                     <li>
                       <a href="{% url 'orcamentoexterno_list' %}">
-                        <span class="sub-item">Listar Orçamento Externos</span>
+                        <span class="sub-item">Orçamentos Externos</span>
                       </a>
-                    </li>
-                    <li>
-                      <a href="{% url 'orcamentoexterno_create' %}">
-                        <span class="sub-item">Adicionar Orçamento Externo</span>
-                      </a>
-                    </li>
+                    </li>                    
                   </ul>
                 </div>
               </li>
