--- a/contract/templates/aditivos/aditivo_form.html
+++ b/contract/templates/aditivos/aditivo_form.html
@@ -1,21 +1,42 @@
 {% extends 'index.html' %}
 
 {% block 'conteudo' %}
-<div class="container-fluid">
+<div class="container">
     <div class="page-inner">
         <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="card mb-4">
-                    <div class="card-header bg-primary text-white text-center">
-                        <h4 class="card-title mb-0">{% if aditivo.pk %}Editar{% else %}Adicionar{% endif %} Aditivo</h4>
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4 class="card-title text-center">{% if form.instance.pk %}Editar Aditivo{% else %}Adicionar Aditivo{% endif %}</h4>
                     </div>
                     <div class="card-body">
                         <form method="post">
                             {% csrf_token %}
-                            {{ form.as_p }}
-                            <div class="d-flex justify-content-between">
-                                <button type="submit" class="btn btn-primary">{% if aditivo.pk %}Salvar{% else %}Adicionar{% endif %}</button>
-                                <a href="{% url 'aditivo_list' %}" class="btn btn-secondary">Cancelar</a>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        {{ form.contrato.label_tag }} {{ form.contrato }}
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        {{ form.data.label_tag }} {{ form.data }}
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        {{ form.valor.label_tag }} {{ form.valor }}
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        {{ form.justificativa.label_tag }} {{ form.justificativa }}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group text-center mt-4 d-flex justify-content-left">
+                                <button type="submit" class="btn btn-success mx-2 w-40">Salvar</button>
+                                <a href="{% url 'aditivo_list' %}" class="btn btn-danger mx-2 w-40">Cancelar</a>
                             </div>
                         </form>
                     </div>
@@ -24,10 +45,16 @@
         </div>
     </div>
 </div>
+{% endblock %}
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
     var dropdowns = document.getElementsByClassName("dropdown-btn");
-    for (var i = 0; i < dropdowns.length; i++) {
+    var i;
+
+    for (i = 0; i < dropdowns.length; i++) {
         dropdowns[i].addEventListener("click", function() {
             this.classList.toggle("active");
             var dropdownContent = this.nextElementSibling;
@@ -39,7 +66,3 @@
         });
     }
 </script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrap/4.5.2/js/bootstrap.min.js"></script>
-{% endblock %}
