--- a/contract/templates/aditivos/aditivo_list.html
+++ b/contract/templates/aditivos/aditivo_list.html
@@ -1,52 +1,53 @@
 {% extends 'index.html' %}
 
 {% block 'conteudo' %}
-<div class="container-fluid">
+<div class="container">
     <div class="page-inner">
-        <div class="row justify-content-center">
-            <div class="col-lg-12">
-                <div class="card mb-4">
-                    <div class="card-header bg-primary text-white text-center">
-                        <h4 class="card-title mb-0">Lista de Aditivos</h4>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4 class="card-title">Lista de Aditivos</h4>
+                        <a href="{% url 'aditivo_create' %}" class="btn btn-success btn-sm">
+                            <i class="fas fa-plus"></i> Adicionar Aditivo
+                        </a>
                     </div>
                     <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center mb-4">
-                            <a href="{% url 'aditivo_create' %}" class="btn btn-success">Adicionar Aditivo</a>
+                        <div class="input-group mb-3">
+                            <input type="text" id="searchInput" class="form-control" placeholder="Buscar aditivo...">
                         </div>
-                        <div class="table-responsive">
-                            <table class="table table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Contrato</th>
-                                        <th>Data</th>
-                                        <th>Valor</th>
-                                        <th>Justificativa</th>
-                                        <th class="text-center">Ações</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for aditivo in aditivos %}
-                                    <tr>
-                                        <td>{{ aditivo.id }}</td>
-                                        <td>{{ aditivo.contrato.numero_protocolo }}</td>
-                                        <td>{{ aditivo.data }}</td>
-                                        <td>{{ aditivo.valor }}</td>
-                                        <td>{{ aditivo.justificativa }}</td>
-                                        <td class="text-center">
-                                            <a href="{% url 'aditivo_detail' aditivo.pk %}" class="btn btn-info btn-sm">Detalhes</a>
-                                            <a href="{% url 'aditivo_update' aditivo.pk %}" class="btn btn-warning btn-sm">Editar</a>
-                                            <a href="{% url 'aditivo_delete' aditivo.pk %}" class="btn btn-danger btn-sm">Excluir</a>
-                                        </td>
-                                    </tr>
-                                    {% empty %}
-                                    <tr>
-                                        <td colspan="6" class="text-center">Nenhum aditivo encontrado.</td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Contrato</th>
+                                    <th>Data</th>
+                                    <th>Valor</th>
+                                    
+                                    <th class="text-center">Ações</th>
+                                </tr>
+                            </thead>
+                            <tbody id="aditivoTable">
+                                {% for aditivo in aditivos %}
+                                <tr>
+                                    <td>{{ aditivo.id }}</td>
+                                    <td>{{ aditivo.contrato.numero_protocolo }}</td>
+                                    <td>{{ aditivo.data }}</td>
+                                    <td>{{ aditivo.valor }}</td>
+                                    
+                                    <td class="text-center">
+                                        <a href="{% url 'aditivo_detail' aditivo.pk %}" class="btn btn-info btn-sm">Detalhes</a>
+                                        <a href="{% url 'aditivo_update' aditivo.pk %}" class="btn btn-warning btn-sm">Editar</a>
+                                        <a href="{% url 'aditivo_delete' aditivo.pk %}" class="btn btn-danger btn-sm">Deletar</a>
+                                    </td>
+                                </tr>
+                                {% empty %}
+                                <tr>
+                                    <td colspan="6" class="text-center">Nenhum aditivo encontrado.</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -55,20 +56,18 @@
 </div>
 
 <script>
-    var dropdowns = document.getElementsByClassName("dropdown-btn");
-    for (var i = 0; i < dropdowns.length; i++) {
-        dropdowns[i].addEventListener("click", function() {
-            this.classList.toggle("active");
-            var dropdownContent = this.nextElementSibling;
-            if (dropdownContent.style.display === "block") {
-                dropdownContent.style.display = "none";
+    document.getElementById('searchInput').addEventListener('keyup', function() {
+        var searchValue = this.value.toLowerCase();
+        var rows = document.querySelectorAll('#aditivoTable tr');
+        rows.forEach(function(row) {
+            var contrato = row.cells[1].textContent.toLowerCase();
+            var justificativa = row.cells[4].textContent.toLowerCase();
+            if (contrato.includes(searchValue) || justificativa.includes(searchValue)) {
+                row.style.display = '';
             } else {
-                dropdownContent.style.display = "block";
+                row.style.display = 'none';
             }
         });
-    }
+    });
 </script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrap/4.5.2/js/bootstrap.min.js"></script>
 {% endblock %}
